--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,12 +6,14 @@
       "label": "C/C++: g++.exe build active file USE THIS ONE",
       "command": "C:\\msys64\\ucrt64\\bin\\g++.exe",
       "args": [
+        "-std=c++20",
         "-fdiagnostics-color=always",
         "-IC:\\Users\\matth\\Documents\\coding\\cpp\\include\\boost_1_85_0",
+        "-IC:\\Users\\matth\\Documents\\coding\\cpp\\include\\General_resources",
         "-g",
         "C:\\Users\\matth\\Documents\\coding\\cpp\\include\\mymath\\test.cpp",
         "-o",
-        "C:\\Users\\matth\\Documents\\coding\\cpp\\include\\mymath\\test.exe",
+        "C:\\Users\\matth\\Documents\\coding\\cpp\\include\\mymath\\test.exe"
       ],
       "options": {},
       "problemMatcher": [
